--- a/Phrma/R&M/formula's/Amphetaphine/cichorium intybus _derivative/README
+++ b/Phrma/R&M/formula's/Amphetaphine/cichorium intybus _derivative/README
@@ -1,2 +1,2 @@
 
-hydro chloride carbon acid locking white pepper plant bulb formula. 
+hydro sodium chloride carbon acid locked white pepper plant bulb formula. 
