--- a/Phrma/R&M/formula's/Amphetaphine/cichorium intybus _derivative/README
+++ b/Phrma/R&M/formula's/Amphetaphine/cichorium intybus _derivative/README
@@ -1,1 +1,1 @@
-In need of /* for process advancement for calculated yield return of formula.
+In need of /* for process advancement in calculated yield return of formula.
