--- a/Phrma/R&M/formula's/Amphetaphine/cichorium intybus _derivative/README
+++ b/Phrma/R&M/formula's/Amphetaphine/cichorium intybus _derivative/README
@@ -1,1 +1,4 @@
-In need of /* in process advancement for calculated yield return of formula.
+In need of /* in process advancement for calculated maximum yield return of formula.
+
+
+Current process returns modest/favorable yield return of formula.
