--- a/Phrma/R&M/formula's/Amphetaphine/cichorium intybus _derivative/README
+++ b/Phrma/R&M/formula's/Amphetaphine/cichorium intybus _derivative/README
@@ -1,4 +1,4 @@
-In need of /* in process advancement for calculated maximum yield return of formula.
+process advancement for calculated maximum yield return of formula is in standby.
 
 
 Current process returns modest/favorable yield return of formula.
