--- a/README
+++ b/README
@@ -1,3 +1,5 @@
- github.com/conceptslearningmachine\
+ www.github.com/conceptslearningmachine\
 
-www.github.com/tomsnode
+www.github.com/tomsnode\
+
+
